--- a/css/index.css
+++ b/css/index.css
@@ -14,15 +14,16 @@ body {
 
 .banner{
 	display: block;
+
 	margin-left: auto;
 	margin-right: auto;
-	height: 42 px;
+	height: 150px;
 	padding-bottom: 20px;
 }
 
 .vertical-menu {padding-top: 10px;
-	padding-left: 9%;
-    width: 150px; /* Set a width if you like */
+	padding-left: 20%;
+    width: 210px; /* Set a width if you like */
 }
 
 .vertical-menu a {
@@ -31,7 +32,7 @@ body {
     display: block; /* Make the links appear below each other */
     padding: 5px; /* Add some padding */
     text-decoration: none; /* Remove underline from links */
-}
+    }
 
 .vertical-menu a:hover {
     color: 	#B22222;
@@ -39,8 +40,8 @@ body {
 
 
 header{
-	margin-right: 9%;
-	margin-left: 9%;
+	margin-right: 20%;
+	margin-left: 20%;
 	border-bottom: 1px solid grey;
 	border-top: 1px solid grey;
 	border-bottom-width: 50%;
@@ -50,7 +51,7 @@ header{
 nav ul {
 	
 	margin: 0;
-  	text-align: center;
+  text-align: center;
  	padding-right: 20px;
  	list-style: none;
 }
@@ -77,3 +78,49 @@ h4{
 	padding: -1px;
 }
 
+.titlepage{
+
+  margin-top: 21px;
+  margin-left: 20%;
+  margin-right: 20%;
+
+}
+
+
+footer {
+  width: 100%;
+  margin: center;
+  text-align: center;
+  display: inline-block;
+  background-color: #FFE4B5;
+}
+.shapeuptwittermain{
+  margin-top:18px;
+  margin-right:25%;
+  padding-left: 10px;
+    
+    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;float:right;
+  
+
+}
+
+.frontimagesright{
+  max-width:400px;
+  padding-left: 10px;
+  margin-top:-59px;
+  margin-right:20%;
+
+    
+    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;float:right;
+    
+ 
+
+}
