--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,9 @@ body {
   background-repeat: no-repeat ;
   background-color: #FFE4B5;
 }
-
+.center{
+  text-align: center;
+}
 .banner{
 	display: block;
 
