--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
   background-repeat: no-repeat ;
   background-color: #FFE4B5;
 }
-.center{
+.centered{
   text-align: center;
   align-items: center;
 }
